fix: overflow events (travel page) and travel cards css on home

--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,12 +1,6 @@
 .bg-gray{
   background-color : #FAFAFA;
 }
-.image-container {
-  width: 150px; /* largura fixa */
-  height: 150px; /* altura fixa */
-  overflow: hidden;
-  position: relative;
-}
 
 .image-container img {
   width: 100%;
